update dev asahi project

--- a/public/backend/css/custom.css
+++ b/public/backend/css/custom.css
@@ -795,3 +795,19 @@ input[type="button"].btn-block {
        -o-transition: opacity .15s linear;
           transition: opacity .15s linear;
 }
+
+a:link {
+    text-decoration: none;
+}
+
+#transmark{
+    display: none;
+}
+
+table tbody tr.col3 span#transmark{
+    display: none;
+}
+
+table tbody tr span#transmark{
+    display: none;
+}
