--- a/public/backend/css/style.css
+++ b/public/backend/css/style.css
@@ -44,18 +44,19 @@ td {
 	color: #C00;
 }
 a {
-    color: #0000FF
+    color: #0000FF;
 }
 a:link {
-    color: #0000FF
+    color: #0000FF;
 }
 a:visited {
-    color: #0000FF
+    color: #0000FF;
 }
 a:hover {
-    color: #0000FF
+    color: #0000FF;
 }
 a:active {
-    color: #0000FF
+    color: #0000FF;
 }
+
 
