--- a/public/backend/css/custom.css
+++ b/public/backend/css/custom.css
@@ -327,7 +327,7 @@ div.pull-right ul.pagination {
     margin-top: -3px;
 }
 
-.btn {
+/*.btn {
   display: inline-block;
   padding: 6px 12px;
   margin-bottom: 0;
@@ -344,7 +344,7 @@ div.pull-right ul.pagination {
   background-image: none;
   border: 1px solid transparent;
   border-radius: 4px;
-}
+}*/
 .btn:focus,
 .btn:active:focus,
 .btn.active:focus,
